styling css (minor bug JS bar stuck when dbl click)

--- a/style.css
+++ b/style.css
@@ -1,26 +1,56 @@
+*{
+    margin: 0 auto;
+}
+
 body {
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background: rgb(2,0,36);
+    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(76,9,121,1) 35%, rgba(81,0,255,0.17128858379289214) 100%);
 }
 
 main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 700px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    height: 80vh;
 }
+
+header {
+    background-color: black;
+    height: 100px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+h1 {
+    color: white;
+    font-style: normal;
+    font-family: 'Rubik Broken Fax', system-ui;
+    font-size: 4em;
+    margin: auto;
+    }
 
 button {
  height: 150px;
  width: 150px;
- background-color: rgb(255,0,0);
+ margin-left: 200px;
+ background-color: rgb(0, 0, 0);
  border: 3px solid rgba(0, 0, 0, 0.541);
  border-radius: 100px;
  font-weight: bolder;
- font-size: 1.5em;
- color: white;
+ font-size: 1.7em;
+ font-family: 'Black Ops One', system-ui;
+ color: rgb(255, 255, 255);
+ box-shadow:  0 0 10px 5px #ff00eab2,
+ 0 0 20px 7px #ebecca,
+ 0 0 25px 20px #8a2be2,
+ 0 0 30px 25px #ff1493;
+ animation: blackHoleMovement 5s alternate  cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
 }
 
 #block{
@@ -30,11 +60,31 @@ button {
 }
 
 #blockBox{
+    margin-left: 100px;
     display: flex;
     align-items: end;
+    width: 200px;
 }
 
 #percentage{
     margin: 0 20px 0 20px;
     padding: 5px;
+    color: whitesmoke;
+}
+
+.wrapper {
+    padding: 10px;
+    animation: shadows 2s infinite
+}
+
+@keyframes shadows {
+    0% { text-shadow: #ffffff 0 0 70px; }
+    50% { text-shadow: blueviolet 0 0 70px; }
+    75% { text-shadow: rebeccapurple 0 0 70px;}
+    100% { text-shadow: #000000 0 0 70px; }
+   }
+
+@keyframes blackHoleMovement {
+    0% {margin-left: 50px;}
+    100% {margin-left: 200px;}
 }
